- mengubah lebel biodata - menambahkan gambar kawah - menambahkan gambar puswil

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <a class="navbar-brand" href="#"> <img src="assets/img/zamir.jpg" class="profile-picture"> </a>
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Biodata.</h3>
             <p class="fst-italic">
               The pain itself is the love of the pain, the main ecological problems, but I give this kind of time to
               fall down, so that some great pain and pain.
@@ -352,15 +352,15 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-motorcycle">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-pekanbaru">
             <div class="portfolio-wrap">
-              <img src="assets/img/motorcycle2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/kawah.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>motorcycle 2</h4>
-                <p>motorcycle</p>
+                <h4>2nd place</h4>
+                <p>crater</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/motorcycle2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Yamaha R1M"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/kawah.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Kawah Biru"><i class="bx bx-plus"></i></a>
                   <a href="motorcycle-2.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -416,15 +416,15 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-motorcycle">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-pekanbaru">
             <div class="portfolio-wrap">
-              <img src="assets/img/motorcycle3.webp" class="img-fluid" alt="">
+              <img src="assets/img/puswil.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>motorcycle 3</h4>
-                <p>motorcycle</p>
+                <h4>3rd place</h4>
+                <p>library</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/motorcycle3.webp" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Ducati Panigale V4"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/puswil.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="perpustakaan soeman hs"><i class="bx bx-plus"></i></a>
                   <a href="motorcycle-3.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
