menghapus field yang tidak di gunakan dalam kontak

--- a/index.html
+++ b/index.html
@@ -493,7 +493,8 @@
                 <i class="bx bx-tachometer"></i>
               </div>
               <h4><a href="">Magni Dolores</a></h4>
-              <p>They are the exception that craves blacks, they do not see, they are the ones who blame the services</p>
+              <p>They are the exception that craves blacks, they do not see, they are the ones who blame the services
+              </p>
             </div>
           </div>
 
@@ -684,17 +685,6 @@
               <div class="form-group mt-3">
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
               </div>
-              <div class="row mt-3">
-                <div class="col-4 form-group">
-                  <input class="form-control" type="password" />
-                </div>
-                <div class="col-4 form-group">
-                  <input class="form-control" type="text" placeholder="Your Class" />
-                </div>
-                <div class="col-4 form-group">
-                  <input class="form-control" type="text" />
-                </div>
-              </div>
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
@@ -719,7 +709,8 @@
   <footer id="footer">
     <div class="container">
       <h3>Zamir Al Ariz</h3>
-      <p>And they are nothing but him or anyone who can escape them. Choosing a flight of great physical exertion is often the most comfortable thing to do.</p>
+      <p>And they are nothing but him or anyone who can escape them. Choosing a flight of great physical exertion is
+        often the most comfortable thing to do.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
